# general-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
prompts/: 00_README.md  01_PRD.md  02_Architecture.md  03_Runtime.md  04_Repository.md  05_Phases.md  06_Coding_Standards.md  07_Testing.md  08_Green_Flag.md  09_V2_Roadmap.md
savana_scraper/: __init__.py  __main__.py  cli.py
savana_scraper/core/: __init__.py  browser.py  config.py  exceptions.py  logging.py  retry.py  robots.py
savana_scraper/models/: __init__.py  product.py
savana_scraper/services/: __init__.py  adapter.py  breadcrumbs.py  exporter.py  extractor.py  generic_source.py  page_signals.py  pipeline.py  pricing.py  registry.py  savana_adapter.py  savana_api.py  savana_ssr.py  sitemap_source.py  sources.py  taxonomy.py  validator.py
savana_scraper/storage/: __init__.py  state.py
savana_scraper/web/: __init__.py  app.py  jobs.py
tests/: conftest.py  test_breadcrumbs.py  test_browser_integration.py  test_category_enricher.py  test_exporter.py  test_extractor.py  test_generic_crawl_integration.py  test_models.py  test_page_signals.py  test_pagination.py  test_pricing.py  test_registry.py  test_savana_api.py  test_savana_ssr.py  test_sitemap.py  test_state.py  test_taxonomy.py  test_validator.py  test_web_api.py
