[project]
name = "savana-scraper"
version = "0.1.0"
description = "Product scraping platform: adapter registry, generic crawler, CSV export"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Savana Scraper Team" }]
dependencies = [
    "playwright>=1.44",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "tenacity>=8.2",
    "lxml>=5.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "black>=24.4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
savana-scraper = "savana_scraper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["savana_scraper"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer's declarative API requires calls (typer.Option/Argument) in defaults.
"savana_scraper/cli.py" = ["B008"]
# conftest deliberately sets sys.path before importing the package under test.
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
